--- a/sap/templates/lineaBase/generar_linea_base.html
+++ b/sap/templates/lineaBase/generar_linea_base.html
@@ -33,7 +33,7 @@
 				<th> Items: </th>
 				<td>
 				<ul>
-					<li><input type="checkbox" onclick="selectall(this);"/> Seleccionar Todos</li>
+					<li><input type="checkbox" onclick="marcar(this);"/> Seleccionar Todos</li>
 				{% for id, nombre in items %}
 						{% if forloop.counter == 7 or forloop.counter == 14 %}
 							</ul>
