--- a/sap/templates/lineaBase/lineas_base.html
+++ b/sap/templates/lineaBase/lineas_base.html
@@ -22,7 +22,7 @@
 <div class="row">
 	<form class="navbar-form navbar-left">
 		
-		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-sort-by-attributes"> Crear Linea Base</span></button></a>
+		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-indent-left"></span> Crear Linea Base</button></a>
 		<div class="form-group">
 			{% if error %}
 			<p style="color:red;">No se encontraron coincidencias.</p>
