--- a/sap/templates/Roles/rolnuevo.html
+++ b/sap/templates/Roles/rolnuevo.html
@@ -37,12 +37,145 @@
 {% block contenido %}
 <div class="content-secondary">
 	{% if form.errors %}
-		Por favor verifique:error
+		<p style="color:red;">Por favor verifique:</p>
 	{% endif %}
 	
 	<form action="" method="post">
 		<table align="center">
-			{{ form.as_table }}
+			<div class="field">
+            {{ form.Nombre_de_Rol.errors }}
+	            <tr> 
+		            <th><label for="id_Nombre_de_Rol">Nombre de Rol:</label></th>
+		            <td>{{ form.Nombre_de_Rol }}</td>
+	            </tr>
+        	</div>
+        	<div class="field">
+            {{ form.Permisos.errors }}
+	            <tr>
+		            <th><label for="id_Permisos">Permisos:</label></th>
+		            <td>
+						<p style="color:white;"><input type="checkbox" onclick="marcar_permisos(this);"/> Seleccionar Todos</p>
+		            {% for id,permiso in permisos  %}
+		            	{% if forloop.counter <= 5 %}
+		            		{% if forloop.counter == 1 %}
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Fases</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+							 
+						{% elif forloop.counter <= 10 %}
+							{% if forloop.counter == 6 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Proyectos</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter <= 17 %}
+							{% if forloop.counter == 11 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Roles</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter <= 22 %}
+							{% if forloop.counter == 18 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Tipo de Atributo</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter <= 26 %}
+							{% if forloop.counter == 23 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Usuarios</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter <= 35 %}
+							{% if forloop.counter == 27 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Items</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter <= 41 %}
+							{% if forloop.counter == 36 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Linea Base</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% elif forloop.counter >= 57 %}
+							{% if forloop.counter == 57 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Tipo de Atributo</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% else %}
+							{% if forloop.counter == 42 %}
+							  </div>
+							 </div>
+			            	 <div class="panel panel-default">
+							  <div class="panel-heading">
+							    <h3 class="panel-title">Otros</h3>
+							  </div>
+							  <div class="panel-body">
+							 {% endif %}
+							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
+						{% endif %}
+					{% endfor %}
+							</div>
+							 </div>
+		            </td>
+		            *
+	            </tr>
+        	</div>
+        	<div class="field">
+            {{ form.Proyecto.errors }}
+	            <tr>
+		            <th><label for="id_Proyecto">Proyecto:</label></th>
+		            <td>{{ form.Proyecto }}</td>
+	            </tr>
+        	</div>
+        	<div class="field">
+            {{ form.Descripcion.errors }}
+	            <tr>
+		            <th><label for="id_Descripcion">Descripcion:</label></th>
+		            <td>{{ form.Descripcion }}</td>
+	            </tr>
+        	</div>
 		</table>
 		{% csrf_token %}
 	<div align="center"><br>
