--- a/sap/templates/Roles/rolnuevo.html
+++ b/sap/templates/Roles/rolnuevo.html
@@ -66,7 +66,7 @@
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
 							 
-						{% elif forloop.counter <= 10 %}
+						{% elif forloop.counter <= 12 %}
 							{% if forloop.counter == 6 %}
 							  </div>
 							 </div>
@@ -77,8 +77,8 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter <= 17 %}
-							{% if forloop.counter == 11 %}
+						{% elif forloop.counter <= 19 %}
+							{% if forloop.counter == 13 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
@@ -88,8 +88,8 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter <= 22 %}
-							{% if forloop.counter == 18 %}
+						{% elif forloop.counter <= 24 %}
+							{% if forloop.counter == 20 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
@@ -99,8 +99,8 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter <= 26 %}
-							{% if forloop.counter == 23 %}
+						{% elif forloop.counter <= 28 %}
+							{% if forloop.counter == 25 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
@@ -110,8 +110,8 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter <= 35 %}
-							{% if forloop.counter == 27 %}
+						{% elif forloop.counter <= 37 %}
+							{% if forloop.counter == 29 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
@@ -121,8 +121,8 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter <= 41 %}
-							{% if forloop.counter == 36 %}
+						{% elif forloop.counter <= 43 %}
+							{% if forloop.counter == 38 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
@@ -132,19 +132,19 @@
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
-						{% elif forloop.counter >= 57 %}
-							{% if forloop.counter == 57 %}
+						{% elif forloop.counter >= 55 %}
+							{% if forloop.counter == 55 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
 							  <div class="panel-heading">
-							    <h3 class="panel-title">Tipo de Atributo</h3>
+							    <h3 class="panel-title">Tipo de Item</h3>
 							  </div>
 							  <div class="panel-body">
 							 {% endif %}
 							    <li><input type="checkbox" name="Permisos" value="{{ id }}" />{{ permiso }}</li>
 						{% else %}
-							{% if forloop.counter == 42 %}
+							{% if forloop.counter == 44 %}
 							  </div>
 							 </div>
 			            	 <div class="panel panel-default">
