--- a/sap/templates/items/mostrareliminados.html
+++ b/sap/templates/items/mostrareliminados.html
@@ -119,7 +119,7 @@
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
 				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.relacion }}">
-				          			{{ padre.nombreitem }}
+				          			{{ padre.nombre }}
 				        		</a>
 				      		</h4>
 				    	</div>
@@ -133,57 +133,11 @@
 				      		</h4>
 				    	</div>
 				    </div>
-				    
-				    <div id="collapse{{ padre.relacion }}" class="panel-collapse collapse pull-left">
-				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ padre.relacion }}"><span class="glyphicon glyphicon-trash"></span> Revivir </button>
-				      </div>
-				    </div>
 				</div>
 				</table>
 					{% csrf_token %}
 			{% endif %}
-			{% if lista_relaciones %}
-			{% for relacion in lista_relaciones %}
-				<div class="panel panel-default">
-					<div class="col-md-4">
-				    	<div class="panel-heading">
-				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
-				          			{{ relacion.nombreitem }}
-				        		</a>
-				      		</h4>
-				    	</div>
-				    </div>				    
-				    <div class="col-md-4">
-				    	<div class="panel-heading">
-				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
-				          			Hijo
-				        		</a>
-				      		</h4>
-				    	</div>
-				    </div>
-				    
-				    <div id="collapse{{ relacion.relacion }}" class="panel-collapse collapse pull-left">
-				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.relacion }}"><span class="glyphicon glyphicon-trash"></span> Revivir </button>
-				      </div>
-				    </div>
-				</div>
-			{% endfor %}
-		</table>
-					{% csrf_token %}
-		</div>
-		
-		{% else %}	
-				<div class="jumbotron">
-					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron hijos/sucesores</small></p>
-					</div>
-				</div>
 			
-		{% endif %}
 		<div  align="center">
 			<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/">Volver</a>
 		</div>
