--- a/sap/templates/relaciones/relaciones.html
+++ b/sap/templates/relaciones/relaciones.html
@@ -48,24 +48,6 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-	{% if lista_relaciones %}
-		<div class="row ">
-			<div class="panel-group" id="accordion">
-				<div class="panel panel-default">
-					<div class="row">
-				    	<div class="col-md-4">
-				   			<div class="panel-heading">
-				      			<h4 class="panel-title"><b>Nombre</b></h4>
-				    		</div>
-				    	</div>				    
-				    	<div class="col-md-4">
-				    		<div class="panel-heading">
-				      			<h4 class="panel-title"><b>Relacion (Item listado)</b></h4>
-				    		</div>
-				    	</div>
-				    </div>
-				</div>
-	{% else %}
 		{% if padre %}
 			<div class="row ">
 			<div class="panel-group" id="accordion">
@@ -83,14 +65,13 @@
 				    	</div>
 				    </div>
 				</div>
-		{% endif %}
-				{% if padre %}
+
 				<div class="panel panel-default">
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.relacion }}">
-				          			{{ padre.nombreitem }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.id }}">
+				          			{{ padre.nombre }}
 				        		</a>
 				      		</h4>
 				    	</div>
@@ -98,58 +79,21 @@
 				     <div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.relacion }}">
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ padre.id }}">
 				          			Padre
 				        		</a>
 				      		</h4>
 				    	</div>
 				    </div>
-				    <div id="collapse{{ padre.relacion }}" class="panel-collapse collapse pull-left">
+				    <div id="collapse{{ padre.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ padre.relacion }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
+				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ padre.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
 				      </div>
 				    </div>
-				    {% else %}
+		{% else %}
 				    <div class="jumbotron">
 					<div class="bs-example">
 						<p class="text-warning" align="center"><small>No se encontro relacion padre/antecesor</small></p>
-					</div>
-				</div>
-				   {% endif %}
-				   {% if lista_relaciones %}
-				{% for relacion in lista_relacioness %}
-					<div class="col-md-4">
-				    	<div class="panel-heading">
-				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
-				          			{{ relacion.nombreitem }}
-				        		</a>
-				      		</h4>
-				    	</div>
-				    </div>				    
-				    <div class="col-md-4">
-				    	<div class="panel-heading">
-				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ relacion.relacion }}">
-				          			Hijo
-				        		</a>
-				      		</h4>
-				    	</div>
-				    </div>
-				    
-				    <div id="collapse{{ relacion.relacion }}" class="panel-collapse collapse pull-left">
-				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm relaciones" data-toggle="modal" data-target="#myModal" data-id="{{ relacion.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
-				      </div>
-				    </div>
-				</div>
-			{% endfor %}
-		</div>
-		</div>
-		{% else %}
-				<div class="jumbotron">
-					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron hijos/sucesores</small></p>
 					</div>
 				</div>
 		{% endif %}
@@ -175,6 +119,5 @@
 				</div>
 			</div>
 <!-- Finaliza el Modal -->
-			{% endif %}
 </div>
 {% endblock %}
