arreglos y docmuentacion de consulta e informe de linea base

--- a/sap/templates/items/consultaratributos.html
+++ b/sap/templates/items/consultaratributos.html
@@ -80,7 +80,7 @@
 		</table>
 					{% csrf_token %}
 					<div  align="center">
-						<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/consultar/{{ id_item }}/">Atras</a>
+						<a type="button" class="btn btn-default" href="javascript:window.history.back();">Atras</a>
 						<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/"> OK</a>						
 					</div>
 		</div>
