--- a/sap/templates/lineaBase/lineas_base.html
+++ b/sap/templates/lineaBase/lineas_base.html
@@ -35,7 +35,7 @@
 <div class="menu">
 	<ul>
 		<li id="option2">
-		 	<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/adm_items/{{ id_fase }}/">Items</a>
+		 	<a href="/adm_proyectos/gestionar/{{ proyecto.id }}/adm_items/{{ fase.id }}/">Items</a>
 		</li>
 		<li id="option1" class="active">
 			<a href="#">Lineas Base</a>
