administracion de solicitudes realizadas hecho

--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -30,7 +30,7 @@
 			<a href="/">Proyectos</a>
 		</li>
 		<li id="option2" >
-			<a href="#">Solicitudes</a>
+			<a href="solicitudes_realizadas/">Solicitudes</a>
 		</li>
 		<li id="option3">
 		 	<a href="#">Credenciales</a>
