--- a/sap/templates/comite/miembroscomite.html
+++ b/sap/templates/comite/miembroscomite.html
@@ -9,7 +9,7 @@
 	<div  class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<li><a href="/adm_proyectos/">Proyectos</a></li>
-			<li class="active"><a href="/adm_proyectos/gestionar/{{ proyecto.id }}/">Gestión de {{ proyecto.nombre }}</a></li>
+			<li class="active"><a href="/adm_proyectos/gestionar/{{ proyecto.id }}/">Comite de cambio {{ proyecto.nombre }}</a></li>
         </ul>
 
 		<ul class="nav navbar-nav navbar-right">
@@ -44,25 +44,14 @@
 
 {% block botones %}
 <div class="row">
-	<form class="navbar-form navbar-left">
-		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Crear Fase</button></a>
-		<a href="importar_fase/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Importar Fase</button></a>
-		{% ifequal proyecto.estado "Inactivo" %}
-			<a href="ordenar_fases/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-import"></span> Ordenar Fases</button></a>
-		{% endifequal %}
-		<form action="" method="get">
-				<input type="text" name="busqueda" class="form-control" placeholder="Busqueda de Fases..." value="{{ query|escape }}">
-				<span class="glyphicon glyphicon-search"></span>
-				<input class="btn btn-default" type="submit" value="Buscar Fase">
-		</form>
-	</form>
+		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Agregar Miembros </button></a>
 </div>
 {% endblock %}
 
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-		{% if lista_fases %}
+		{% if miembros %}
 		<div class="row ">
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
@@ -72,41 +61,23 @@
 				      			<h4 class="panel-title"><b>Nombre</b></h4>
 				    		</div>
 				    	</div>				    
-				    	<div class="col-md-4">
-				    		<div class="panel-heading">
-				      			<h4 class="panel-title"><b>Estado</b></h4>
-				    		</div>
-				    	</div>
 				    </div>
 				</div>
-			{% for fase in lista_fases %}
+			{% for miembro in miembros %}
 				<div class="panel panel-default">
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ fase.id }}">
-				          		{{ fase.nombre }}
+				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ miembro.id }}">
+				          		{{ miembro.nombre }}
 				        		</a>
 				      		</h4>
 				    	</div>
 				    </div>				    
-				    <div class="col-md-4">
-				    	<div class="panel-heading">
-				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ fase.id }}">
-				          		{{ fase.estado }}
-				        		</a>
-				      		</h4>
-				    	</div>
-				    </div>
 				    
-				    <div id="collapse{{ fase.id }}" class="panel-collapse collapse pull-left">
+				    <div id="collapse{{ miembro.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-
-				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-				      		<a href="modificar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Modificar</button></a>
 				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
-				      		<a href="adm_items/{{ fase.id }}/"><button type="button" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-th"></span> Gestionar Fase</button></a>
 				      </div>
 				    </div>
 				</div>
@@ -117,7 +88,7 @@
 		{% else %}
 			{% if error %}
 				<div class="jumbotron">
-  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias</b></p></h3></div>
+  					<div class="alert alert-danger"><h3><p align="center"><b>No posee miembros.</b></p></h3></div>
 				</div>
 				<div  align="center">
 					<a type="button" class="btn btn-default" href="/adm_proyectos/gestionar/{{ id_proyecto }}/">Volver</a>
@@ -125,7 +96,7 @@
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Fases</small></p>
+						<p class="text-warning" align="center"><small>No posee miembros</small></p>
 					</div>
 				</div>
 			{% endif %}
@@ -141,11 +112,11 @@
 							<h4 class="modal-title" id="myModalLabel">Eliminar</h4>
 						</div>
 						<div class="modal-body">
-							Esta usted seguro de que desea eliminar la fase?
+							Esta usted seguro de que desea eliminar al miembro del comite?
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancelar</button>
-							<a id="fase" href=""><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-ok"></span> Estoy Seguro</button></a>
+							<a id="miembro" href=""><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-ok"></span> Estoy Seguro</button></a>
 						</div>
 					</div>
 				</div>
