--- a/sap/templates/comite/miembroscomite.html
+++ b/sap/templates/comite/miembroscomite.html
@@ -43,9 +43,7 @@
 {% endblock %}
 
 {% block botones %}
-<div class="row">
-		<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Agregar Miembros </button></a>
-</div>
+
 {% endblock %}
 
 {% block contenido %}
@@ -68,17 +66,9 @@
 					<div class="col-md-4">
 				    	<div class="panel-heading">
 				      		<h4 class="panel-title">
-				        		<a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ miembro.id }}">
-				          		{{ miembro.nombre }}
-				        		</a>
+				          		{{ miembro }}
 				      		</h4>
 				    	</div>
-				    </div>				    
-				    
-				    <div id="collapse{{ miembro.id }}" class="panel-collapse collapse pull-left">
-				      <div class="panel-body">
-				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}"><span class="glyphicon glyphicon-trash"></span> Eliminar</button>
-				      </div>
 				    </div>
 				</div>
 				
