--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -170,5 +170,13 @@
 		  </div>
 		</div>
 		<!-- Finaliza el Modal -->
+		{% if pendientes > 0 %}
+ 			<div class="jumbotron" id="caja_flotante">
+				<div class="bs-example">
+					<h2>Notificacion</h2>
+					<p class="text-warning"><small><b><font color="red">{{ pendientes }}</font> Solicitudes Pendientes</b></small></p>
+				</div>
+			</div>
+		{% endif %}
 </div>
 {% endblock %}
