--- a/sap/templates/comite/miembroscomite.html
+++ b/sap/templates/comite/miembroscomite.html
@@ -43,7 +43,11 @@
 {% endblock %}
 
 {% block botones %}
-
+<div class="row">
+	<form class="navbar-form navbar-left">
+<a href="nuevo/"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-folder-open"></span> Agregar Miembros</button></a>
+</form>
+</div>
 {% endblock %}
 
 {% block contenido %}
