--- a/sap/templates/solicitudes/solicitudesrecibidas.html
+++ b/sap/templates/solicitudes/solicitudesrecibidas.html
@@ -93,7 +93,7 @@
 				    <div id="collapse{{ solicitud.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
 				      		<a href="/adm_proyectos/solicitudes_realizadas/consultar_solicitud/{{ solicitud.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-				      		<a href="#"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Votar</button></a>
+                            <a href="/adm_proyectos/solicitudes_recibidas/votar_solicitud/{{ solicitud.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Votar</button></a>
 				      </div>
 				    </div>
 				    
