--- a/sap/templates/items/items.html
+++ b/sap/templates/items/items.html
@@ -151,7 +151,7 @@
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
-						<p class="text-warning" align="center"><small>No se encontraron Items</small></p>
+						<p class="text-warning" align="center"><small>No se encontraron Items en la fase</small></p>
 					</div>
 				</div>
 			{% endif %}}
