pruebas y pop up

--- a/sap/static/aplicaciones/css/main.css
+++ b/sap/static/aplicaciones/css/main.css
@@ -215,13 +215,47 @@ body
 	left: 10px;
 	border: 1px solid #CCC;
 	background-color: #F2F2F2;
-	width:220px;
+	width:260px;
 	border-radius: 6px 6px 6px 6px;
 	text-align: center;
 
 }
 
 #caja_flotante div{margin: 10px;}
+
+#caja_flotante  .cerrar {
+float: right;
+border-bottom: 1px solid #bbb;
+border-left: 1px solid #bbb;
+border-top: 1px solid #bbb;
+border-right: 1px solid #bbb;
+color: #999;
+background: white;
+line-height: 17px;
+text-decoration: none;
+padding: 0px 14px;
+border-radius: 5px 5px 5px 5px;
+box-shadow: -1px 1px white;
+font-size: 18px;
+-webkit-transition: .3s;
+-moz-transition: .3s;
+-o-transition: .3s;
+-ms-transition: .3s;
+}
+#caja_flotante  .cerrar:hover {
+background: #ff6868;
+color: white;
+text-decoration: none;
+text-shadow: -1px -1px red;
+border-bottom: 1px solid red;
+border-left: 1px solid red;
+border-top: 1px solid red;
+border-right: 1px solid red;
+}
+
+.oculto {-webkit-transition:1s;-moz-transition:1s;-o-transition:1s;-ms-transition:1s;opacity:0;-ms-opacity:0;-moz-opacity:0;visibility:hidden;}
+
+
 
 /* ==========================================================================
    Media Queries
