--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -35,7 +35,7 @@
 		<li id="option1" class="active">
 			<a href="/"><p>{{ proyecto.nombre }}</p> Fases</a>
 		</li>
-		<li id="option2" class="active">
+		<li id="option2">
 			<a href="/adm_proyectos/gestionar/{{ proyecto.id }}/comite/"><p>{{ proyecto.nombre }}</p> Comite </a>
 		</li>
 	</ul>
