--- a/sap/templates/comite/miembroscomite.html
+++ b/sap/templates/comite/miembroscomite.html
@@ -32,8 +32,8 @@
 {% block menu %}		
 <div class="menu">
 	<ul>
-		<li id="option1" class="active">
-			<a href="/"><p>{{ proyecto.nombre }}</p> Fases</a>
+		<li id="option1">
+			<a href="/adm_proyectos/gestionar/{{ proyecto.id }}/"><p>{{ proyecto.nombre }}</p> Fases</a>
 		</li>
 		<li id="option2" class="active">
 			<a href="/adm_proyectos/gestionar/{{ proyecto.id }}/comite/"><p>{{ proyecto.nombre }}</p> Comite </a>
