--- a/sap/templates/solicitudes/solicitudesrecibidas.html
+++ b/sap/templates/solicitudes/solicitudesrecibidas.html
@@ -45,7 +45,7 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-		{% if solicitudes %}
+		{% if lista_solicitud %}
 		<div class="row ">
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
@@ -65,7 +65,7 @@
 				    	</div>
 				    </div>
 				</div>
-			{% for solicitud in solicitudes %}
+			{% for solicitud, votado in lista_solicitud %}
 				<div class="panel panel-default">
 					
 				    
@@ -93,7 +93,9 @@
 				    <div id="collapse{{ solicitud.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
 				      		<a href="/adm_proyectos/solicitudes_realizadas/consultar_solicitud/{{ solicitud.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Consultar</button></a>
-                            <a href="/adm_proyectos/solicitudes_recibidas/votar_solicitud/{{ solicitud.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-eye-open"></span> Votar</button></a>
+				      		{% if votado == False %}
+                            <a href="/adm_proyectos/solicitudes_recibidas/votar_solicitud/{{ solicitud.id }}/"><button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-ok-circle"></span> Votar</button></a>
+                            {% endif %}
 				      </div>
 				    </div>
 				    
